Remote root albums no longer merge into our root album
